--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -1,18 +1,70 @@
-.app {
-  // background: #ff7a90;
+.apps {
+  animation: fadeIn ease 1400ms;
+  -webkit-animation: fadeIn ease 1400ms;
+  -webkit-animation-delay: 800ms;
+  animation-delay: 800ms;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+/*
+*
+*
+* STYLING FOR ALL PAGES
+*
+*
+*/
+body {
+  background: #7b9c98 !important;
   /* background: url(https://wallpaperaccess.com/full/1670732.jpg);
   background-size: cover;
   background-position: center; */
 }
 
+.navbar {
+  text-decoration: none;
+  color: #384342;
+  padding: 10px;
+  font-size: 13pt;
+  padding-right: 20px;
+  animation: fadeIn ease 1400ms;
+  -webkit-animation: fadeIn ease 1400ms;
+  -webkit-animation-delay: 200ms;
+  animation-delay: 200ms;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+/*
+*
+*
+* HOME PAGE
+*
+*
+*/
 .description {
   font-size: 30px;
+  animation: fadeIn ease 1400ms;
+  -webkit-animation: fadeIn ease 1400ms;
+  -webkit-animation-delay: 800ms;
+  animation-delay: 800ms;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+.homepage {
+  height: 65vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .headerContainer {
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   animation: fadeIn ease 1400ms;
   -webkit-animation: fadeIn ease 1400ms;
   -webkit-animation-delay: 500ms;
@@ -26,24 +78,21 @@
 //   // flex-direction: column;
 //   // align-items: center;
 // }
-.homepage {
-  height: 90vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 
-.navbar {
-  text-decoration: none;
-  color: gray;
-  padding: 10px;
-  font-size: 13pt;
-  padding-right: 20px;
+.jobAppHeading {
   animation: fadeIn ease 1400ms;
   -webkit-animation: fadeIn ease 1400ms;
-  -webkit-animation-delay: 200ms;
-  animation-delay: 200ms;
+  -webkit-animation-delay: 300ms;
+  animation-delay: 300ms;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+.newApp {
+  animation: fadeIn ease 1400ms;
+  -webkit-animation: fadeIn ease 1400ms;
+  -webkit-animation-delay: 600ms;
+  animation-delay: 600ms;
   opacity: 0;
   animation-fill-mode: forwards;
 }
@@ -65,6 +114,12 @@
 .container {
   padding: 20px;
   margin: 20px;
+  animation: fadeIn ease 1200ms;
+  -webkit-animation: fadeIn ease 1200ms;
+  -webkit-animation-delay: 200ms;
+  animation-delay: 200ms;
+  opacity: 0;
+  animation-fill-mode: forwards;
 }
 
 @keyframes fadeIn {
